added recaptcha to pages that needed it

--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -24,12 +24,25 @@
         <hr />
 
         <div class="w-25">
-            <form method="post">
+            <form method="post" onsubmit="return get_action();">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-floating text-black-50">
                     <input asp-for="Input.Email" class="form-control mb-3" aria-required="true" />
                     <label asp-for="Input.Email" class="form-label"></label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <div  id="recap-el"
+                    data-theme="dark" 
+                    class="g-recaptcha p-3" >
+                </div>
+                <!-- Recaptcha Error -->
+                <div id="recaptcha-form-error" style="display: none" class="py-1 px-2" >
+                    <div class="py-1 px-2" style="color: red">Please fill the reCaptcha checkbox</div>
+                </div>
+                <!-- Recaptcha Success -->
+                <div id="recaptcha-form-success" style="display: none" class="py-1 px-2" >
+                    <div class="py-1 px-2" style="color: green">reCaptcha validated</div>
+                    <a href="/" class="px-2 text-slate-800">Retry</a>
                 </div>
                 <button type="submit" class="w-100 btn btn-light btn-lg bg-success btn-outline-primary">Reset Password</button>
             </form>
@@ -40,4 +53,29 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+
+    <script type="text/javascript">
+      var onloadCallback = function() {
+        grecaptcha.render('recap-el', {
+          'sitekey' : '6LcUR58fAAAAAE_MfSR4lud-iBNANz89Bvvmyi7J'
+        });
+      };
+
+    function get_action() 
+    {
+        document.getElementById('recaptcha-form-error').style.display = 'none';
+        var v = grecaptcha.getResponse();
+
+        if(v.length == 0)
+        {
+            document.getElementById('recaptcha-form-error').style.display = 'block';
+            return false;
+        }
+        else
+        {
+            document.getElementById('recaptcha-form-success').style.display = 'block';
+            return true; 
+        }
+    }
+    </script>
 }
