--- a/source/VotingApp/VotingApp/Views/Home/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Home/Index.cshtml
@@ -22,8 +22,8 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Create A Poll</button></a>
             </div>
             <div class="col text-center">
-                <h3 class="h3">Cast A Vote:</h3>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Cast A Vote</button></a>
+                <h3 class="h3">Access A Poll:</h3>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Access A Poll</button></a>
             </div>
         </div>
     </div>
