--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -113,12 +113,15 @@
 
     function get_action() 
     {
+		$('#registerSubmit').prop('disabled', true);
+
         document.getElementById('recaptcha-form-error').style.display = 'none';
         var v = grecaptcha.getResponse();
 
         if(v.length == 0)
         {
             document.getElementById('recaptcha-form-error').style.display = 'block';
+    		$('#registerSubmit').prop('disabled', false);
             return false;
         }
         else
