--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -44,7 +44,7 @@
                     <div class="py-1 px-2" style="color: green">reCaptcha validated</div>
                     <a href="/" class="px-2 text-slate-800">Retry</a>
                 </div>
-                <button type="submit" class="w-100 btn btn-light btn-lg bg-success btn-outline-primary">Resend</button>
+                <button type="submit" id="resendSubmit"class="w-100 btn btn-light btn-lg bg-success btn-outline-primary">Resend</button>
             </form>
         </div>
     </div>
@@ -63,12 +63,15 @@
 
     function get_action() 
     {
+   		$('#resendSubmit').prop('disabled', true);
+
         document.getElementById('recaptcha-form-error').style.display = 'none';
         var v = grecaptcha.getResponse();
 
         if(v.length == 0)
         {
             document.getElementById('recaptcha-form-error').style.display = 'block';
+       		$('#resendSubmit').prop('disabled', false);
             return false;
         }
         else
