--- a/source/VotingApp/VotingApp/Views/Access/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/Index.cshtml
@@ -99,7 +99,8 @@
 
     function get_action1() 
     {
-		var rc = document.getElementById('recap-el');
+		$('#vote-submit').prop('disabled', true);
+    	var rc = document.getElementById('recap-el');
 		if (rc != null) 
 		{
             document.getElementById('recaptcha-form-error').style.display = 'none';
@@ -108,6 +109,7 @@
             if(v.length == 0)
             {
                 document.getElementById('recaptcha-form-error').style.display = 'block';
+        		$('#vote-submit').prop('disabled', false);
                 return false;
             }
             else
@@ -122,7 +124,8 @@
 
     function get_action2() 
     {
-		var rc = document.getElementById('recap-el');
+		$('#results-submit').prop('disabled', true);
+    	var rc = document.getElementById('recap-el');
 		if (rc != null) 
 		{
             document.getElementById('recaptcha-form2-error').style.display = 'none';
@@ -130,6 +133,7 @@
 
             if(v.length == 0)
             {
+        		$('#results-submit').prop('disabled', false);
                 document.getElementById('recaptcha-form2-error').style.display = 'block';
                 return false;
             }
