--- a/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
@@ -62,8 +62,28 @@
 							    <td >@createdVote.VoteType.VotingType</td>
 							    <td>@createdVote.AnonymousVote</td>
 							    <td>@createdVote.VoteAccessCode
-								    <button class="btn btn-light accessBtn" id="accessBtn" data-url="@Html.Raw($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.PathBase}/Access/{createdVote.VoteAccessCode}")">
-									    <i class="fa-solid fa-copy fa-2xs"></i></button></td>
+                                    <div class="row justify-content-center">
+                                    <button class="btn btn-light bg-success btn-outline-primary accessBtn"  style="width: 50px" id="accessBtn" data-url="@Html.Raw($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.PathBase}/Access/{createdVote.VoteAccessCode}")">
+                                            <i class="fa-solid fa-copy fa-2xs"></i></button>
+                                    
+                                    <button type="button" style="width: 50px" class="btn btn-light bg-success btn-outline-primary pl-1" data-toggle="modal" data-target="@Html.Raw("#modal2" + createdVote.Id)">
+                                        QR
+                                    </button>
+
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="@Html.Raw("modal2" + createdVote.Id)" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-body">
+                                                    <div class="row justify-content-center"><img class="rounded" style="max-width: 300px;" src="@Url.Action("LoadQR", new {id = createdVote.Id})" alt="test")><img/>
+                                                        <button style="max-width: 300px;" type="button" class="btn btn-secondary mt-2" data-dismiss="modal">Close</button></div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    </div>
+                                </td>
 
 							    <td>
 								    @if (createdVote.VoteOpenDateTime != null)
@@ -76,37 +96,40 @@
 								    }
 							    </td>
 							    <!--<td ><button type="button" data-toggle="modal" data-target="#editModal" style="width:70px !important" class="btn btn-light bg-success btn-outline-primary" name="edit-button" value=@createdVote.Id onclick="FillValues('@createdVote.Id')">Edit</button></td>-->
-							    <td>
-								    @if ((createdVote.VoteOpenDateTime == null || createdVote.VoteOpenDateTime >= TimeZoneInfo.ConvertTimeBySystemTimeZoneId(DateTime.Now, createdVote.TimeZone.TimeName)) && createdVote.VoteCloseDateTime >= TimeZoneInfo.ConvertTimeBySystemTimeZoneId(DateTime.Now, createdVote.TimeZone.TimeName))
-								    {
-									    <form asp-action="BackToIndexPage" method="post">
-										    <button type="submit" style="width: 140px !important" class="btn btn-light bg-success btn-outline-primary" name="ID" value="@createdVote.Id">Edit</button>
-									    </form>
-								    }
-								    else
-								    {
-									    <button style="width: 140px !important" class="btn btn-light bg-success btn-outline-primary disabled" name="id" value="@createdVote.Id" disabled>Edit</button>
-								    }
-								    <form asp-action="VoteResultsButton" method="post">
-									    <button type="submit" style="width: 140px !important" class="btn btn-light bg-success btn-outline-primary" name="id" value="@createdVote.Id">Poll Results</button>
-								    </form>
-								    <button type="button" style="width:140px" class="btn btn-light bg-success btn-outline-primary" data-toggle="modal" data-target="@Html.Raw("#modal" +createdVote.Id)">
-									    Audio
-								    </button>
+                                <td>
+                                    <div class="col">
+                                    @if ((createdVote.VoteOpenDateTime == null || createdVote.VoteOpenDateTime >= TimeZoneInfo.ConvertTimeBySystemTimeZoneId(DateTime.Now, createdVote.TimeZone.TimeName)) && createdVote.VoteCloseDateTime >= TimeZoneInfo.ConvertTimeBySystemTimeZoneId(DateTime.Now, createdVote.TimeZone.TimeName))
+                                    {
+                                        <form asp-action="BackToIndexPage" method="post">
+                                            <button type="submit" style="width: 140px !important" class="btn btn-light bg-success btn-outline-primary" name="ID" value="@createdVote.Id">Edit</button>
+                                        </form>
+                                    }
+                                    else
+                                    {
+                                        <button style="width: 140px !important" class="btn btn-light bg-success btn-outline-primary disabled" name="id" value="@createdVote.Id" disabled>Edit</button>
+                                    }
+                                    <form asp-action="VoteResultsButton" method="post">
+                                        <button type="submit" style="width: 140px !important" class="btn btn-light bg-success btn-outline-primary" name="id" value="@createdVote.Id">Poll Results</button>
+                                    </form>
+                                    <button type="button" style="width: 140px" class="btn btn-light bg-success btn-outline-primary" data-toggle="modal" data-target="@Html.Raw("#modal" + createdVote.Id)">
+                                        Audio
+                                    </button>
 
-								    <!-- Modal -->
-								    <div class="modal fade" id="@Html.Raw("modal" + createdVote.Id)" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-									    <div class="modal-dialog" role="document">
-										    <div class="modal-content">
-											    <div class="modal-body">
-												    <div class="row justify-content-center"><audio id="VoteAudio" controls src="@Url.Action("LoadAudio", "Create", new { id = createdVote.Id })"></audio>
-													    <button style="max-width: 300px;" type="button" class="btn btn-secondary mt-2" data-dismiss="modal">Close</button></div>
-                                            
-											    </div>
-										    </div>
-									    </div>
-								    </div>
-							    </td>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="@Html.Raw("modal" + createdVote.Id)" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-body">
+                                                    <div class="row justify-content-center"><audio id="VoteAudio" controls src="@Url.Action("LoadAudio", "Create", new {id = createdVote.Id})"></audio>
+                                                        <button style="max-width: 300px;" type="button" class="btn btn-secondary mt-2" data-dismiss="modal">Close</button></div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+
+                                </td>
 						    </tr>
 						    {
 							    i++;
